# panopto-transcriber

./: .env.asc  .env.example  .gitignore  CLAUDE.md  README.md  courses.example.yml  courses.yml  pyproject.toml
.github/workflows/: ci.yml
src/panopto_transcriber/: _progress.py  batch.py  canvas.py  claim.py  cli.py  config.py  discover.py  downloader.py  inventory.py  match_calendar.py  tokens.py  verify.py
src/panopto_transcriber/transcribers/: __init__.py  base.py  openai_whisper.py  whisper_cpp.py
tests/: test_claim.py  test_cli_smoke.py  test_downloader_urls.py  test_match_calendar.py  test_resolve_subdir.py  test_update_yaml.py
