[project]
name = "panopto-transcriber"
version = "0.1.0"
description = "Download Panopto recordings from Canvas and transcribe them locally"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "yt-dlp>=2024.10.0",
]

[project.optional-dependencies]
# Pluggable transcriber backends. Install one or both.
# `whisper-cpp` backend has no Python deps (uses the `whisper-cli` binary from `brew install whisper-cpp`).
openai-whisper = ["openai-whisper>=20231117"]

[project.scripts]
panopto-transcriber = "panopto_transcriber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panopto_transcriber"]
