[project]
name = "panopto-transcriber"
version = "0.1.0"
description = "Download Panopto recordings from Canvas and transcribe them locally"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "icalendar>=7.1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "recurring-ical-events>=3.8.2",
    "tqdm>=4.66",
    "yt-dlp>=2024.10.0",
]

[project.optional-dependencies]
# Pluggable transcriber backends. Install one or both.
# `whisper-cpp` backend has no Python deps (uses the `whisper-cli` binary from `brew install whisper-cpp`).
openai-whisper = ["openai-whisper>=20231117"]
# Panopto-folder auto-discovery (drives a real browser through the LTI launch).
# After installing this extra, also run: uv run playwright install chromium
discover = ["playwright>=1.40"]

[project.scripts]
panopto-transcriber = "panopto_transcriber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panopto_transcriber"]

# Dev tooling. `uv sync` installs this group by default; CI pins it explicitly.
[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
# yt_dlp, playwright, icalendar, recurring_ical_events, tqdm ship no type stubs.
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
